#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-09
2014-01-09 David Schneider
- cleaning user key strings before making h5 group names.

Tag: V00-00-08
2014-01-08 David Schneider
- changing two type names to be backward compatible with o2o-translate.

Tag: V00-00-07
2014-01-06 David Schneider
- Regenerating backend from psddl V00-13-01.
- Updates Translator for ana-0.10.10

Tag: V00-00-06
2014-01-06 David Schneider
- Fixing bug with unit tests - one test depended on removed testing scripts.

Tag: V00-00-05
2013-12-20 David Schneider
- Finished testing - this version seems production ready.
- Removed testing scripts.

Tag: V00-00-04
2013-12-19 David Schneider
- Users can register new hdf writers for simple classes. 
- Changed filtered event handling - event key "do_not_translate" can be
  added to any data - can create numerous datasets in Filtered groups.

Tag: V00-00-03
2013-12-10 David Schneider
- Changed epics handling. Previous version printed the current state of all
  epics at the start of each calib cycle. This version only creates an epics
  pv group/dataset in a calib cycle if it changed.

Tag: V00-00-02
2013-12-09 David Schneider
- Bug fixes and more detailed debugging statements.
- Command line wrapper for psana module.

Tag: V00-00-01
2013-12-04 David Schneider
- first production tag, however more testing needs to be done before 
  using in place of o2o-translate.